# ComfyUi-arwaky

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  comfyui-arwaky  config.default.yaml  config.yaml  download_models.sh  extra_model_paths.yaml  input  model_requirements.md  models  output  requirements.txt  user
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-backend.yml  ci-multi.yml  ci.yml  nightly.yml  release.yml
.graph-it/: update-check.json
assets/ui/: index.html  log-viewer.html  main.js  styles.css
crates/: Cargo.toml
crates/downloader/: Cargo.toml  config.default.yaml  lib.rs  models.json  root_cli_main_entry.rs  root_downloader_container.rs  root_tui_main_entry.rs
crates/downloader/cli/: Cargo.toml
crates/downloader/cli/src/: surface_cli_handler.rs
crates/downloader/config/: Cargo.toml  models.json
crates/downloader/config/src/: lib.rs
crates/downloader/downloader-engine/: Cargo.toml
crates/downloader/downloader-engine/src/: agent_downloader_orchestrator.rs  capabilities_download_engine.rs  infrastructure_http_adapter.rs  lib.rs
crates/downloader/file-utils/: Cargo.toml
crates/downloader/file-utils/src/: capabilities_file_checker.rs  infrastructure_cache_adapter.rs  infrastructure_fs_adapter.rs  lib.rs
crates/downloader/shared/: Cargo.toml
crates/downloader/shared/src/: contract_cache_port.rs  contract_config_port.rs  contract_download_port.rs  contract_download_protocol.rs  contract_downloader_aggregate.rs  contract_file_port.rs  contract_file_protocol.rs  lib.rs  taxonomy_config_vo.rs  taxonomy_download_event_vo.rs  taxonomy_model_vo.rs  taxonomy_size_vo.rs
crates/downloader/src/: config.rs  downloader.rs  lib.rs  main.rs  model.rs  ui.rs  utils.rs
crates/downloader/src/ui/: app.rs  draw.rs  event.rs  mod.rs
crates/downloader/tui/: Cargo.toml
crates/downloader/tui/src/: lib.rs  surface_tui_actions.rs  surface_tui_draw.rs  surface_tui_event.rs  surface_tui_handler.rs  surface_tui_list.rs  surface_tui_state.rs
crates/launcher/: Cargo.toml  config.default.yaml  lib.rs  requirements.txt  root_launcher_container.rs  root_main_desktop_entry.rs  tauri.conf.json
crates/launcher/assets/ui/: main.js  styles.css
crates/launcher/assets/ui/tauri-api/: path.js
crates/launcher/backend-engine/: Cargo.toml
crates/launcher/backend-engine/src/: capabilities_backend_installer.rs  lib.rs
crates/launcher/config/: Cargo.toml
crates/launcher/config/src/: infrastructure_config_loader.rs  lib.rs
crates/launcher/gpu-detector/: Cargo.toml
crates/launcher/gpu-detector/src/: capabilities_gpu_detector.rs  lib.rs
crates/launcher/launcher-engine/: Cargo.toml
crates/launcher/launcher-engine/src/: agent_launcher_orchestrator.rs  lib.rs
crates/launcher/log-engine/: Cargo.toml
crates/launcher/log-engine/src/: file_log_writer.rs  infrastructure_file_log_writer.rs  infrastructure_gpu_monitor_adapter.rs  infrastructure_log_writer.rs  lib.rs  surface_log_command.rs  surface_log_commands.rs  surface_log_writer.rs
crates/launcher/process-manager/: Cargo.toml
crates/launcher/process-manager/src/: infrastructure_process_spawner.rs  lib.rs
crates/launcher/shared/: Cargo.toml
crates/launcher/shared/src/: contract_backend_install_protocol.rs  contract_config_port.rs  contract_gpu_detection_protocol.rs  contract_gpu_monitor_port.rs  contract_launcher_aggregate.rs  contract_log_emitter_port.rs  contract_log_writer_port.rs  contract_process_port.rs  lib.rs  taxonomy_app_config_vo.rs  taxonomy_archive_url_vo.rs  taxonomy_backend_install_error_vo.rs  taxonomy_backend_install_event_vo.rs  taxonomy_backend_status_vo.rs  taxonomy_config_error_vo.rs  taxonomy_gpu_error_vo.rs  taxonomy_gpu_index_vo.rs  taxonomy_gpu_metrics_vo.rs  taxonomy_health_state_vo.rs  taxonomy_hsa_override_vo.rs  taxonomy_install_dir_vo.rs  taxonomy_log_level_vo.rs  taxonomy_log_message_vo.rs  taxonomy_log_state_vo.rs  taxonomy_path_utils.rs  taxonomy_process_error_vo.rs  taxonomy_process_state_vo.rs  taxonomy_sha256_vo.rs
crates/launcher/src/: config.rs  downloader.rs  lib.rs
docs/: architecture.md  gpu_guide.md  scripts.md  troubleshooting.md
extensions/ComfyUI-Desktop-Logs/: __init__.py
extensions/ComfyUI-Desktop-Logs/js/: desktop_logs.js
scripts/: build-downloader.sh  build-launcher.sh  build.sh  bump-version.sh  ci-local.sh  download_models.sh  install_deps.sh  install_local.sh  release.sh  run_comfyui.sh  run_minimal.sh  stop_comfyui.sh  upgrade_rocm.sh  watch-symlinks.sh
src-tauri/: Cargo.toml  config.yaml.default  requirements.txt  tauri.conf.json
src-tauri/assets/icons/: icon.icns
src-tauri/assets/ui/: index.html  main.js  styles.css
src-tauri/src/: downloader.rs  gpu.rs  lib.rs  logging.rs  process.rs
