[package]
name = "app"
version = "0.4.0"
description = "ComfyUI Desktop — Tauri v2 wrapper for ComfyUI with AMD ROCm GPU auto-configuration"
authors = ["raka <raka@arwaky.id>"]
license = "MIT"
repository = "https://github.com/rakaarwaky/ComfyUi-arwaky"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
libc = "0.2"
ureq = { version = "3", features = ["json"] }
flate2 = "1"
tar = "0.4"
sha2 = "0.11"
hex = "0.4"
serde_yaml = "0.9"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
