[package]
name = "comfyui-downloader"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.0", features = ["json"] }
indicatif = "0.17"
hex = "0.4"
sha2 = "0.10"
ratatui = "0.26"
crossterm = { version = "0.27" }
serde_yaml = "0.9"
libc = "0.2"
