[package]
name = "downloader"
version.workspace = true
edition.workspace = true

[lib]
name = "downloader"
path = "lib.rs"

[[bin]]
name = "comfyui-downloader-cli"
path = "root_cli_main_entry.rs"

[[bin]]
name = "comfyui-downloader-tui"
path = "root_tui_main_entry.rs"

[dependencies]
downloader-shared = { path = "shared" }
downloader-config = { path = "config" }
downloader-dl = { path = "downloader-engine" }
downloader-file-utils = { path = "file-utils" }
downloader-tui = { path = "tui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
