[package]
name = "downloader-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "downloader-cli"
path = "src/surface_cli_handler.rs"

[dependencies]
downloader-shared = { path = "../shared" }
downloader-config = { path = "../config" }
downloader-dl = { path = "../downloader-engine" }
downloader-file-utils = { path = "../file-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
