[package]
name = "downloader-dl"
version.workspace = true
edition.workspace = true

[dependencies]
downloader-shared = { path = "../shared" }
downloader-file-utils = { path = "../file-utils" }
downloader-config = { path = "../config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.0", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
