[package]
name = "downloader-tui"
version.workspace = true
edition.workspace = true

[dependencies]
downloader-shared = { path = "../shared" }
downloader-config = { path = "../config" }
downloader-dl = { path = "../downloader-engine" }
downloader-file-utils = { path = "../file-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ureq = { version = "3.0", features = ["json"] }
indicatif = "0.17"
ratatui = "0.26"
crossterm = { version = "0.27" }
libc = "0.2"
